# RoBotAgent

./: .env_template  .gitignore  README.md  botpy.log.2026-04-06  env.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
agent/: context.py  loop.py  message_hub.py  prompt.py  skills.py  utils.py
agent/tool/: CameraWebClient.py  MbotWebClient.py  SensorWebClient.py  __init__.py  base.py  file.py  mbot.py  others.py  registry.py  weather_tool.py  web.py
api/: ollama.py
channels/: cli.py  qq.py
doc/: sglang部署.md  vllm部署.md
doc/agent/: context.md
skills/mbot-guide/: SKILL.md
skills/mbot_guide/: SKILL.md
skills/mbot_guide/mbot_model/: marm.urdf
skills/mbot_guide/references/: camera.md  fixed_action.md  motion_control.md  sensor_get.md
skills/monster_hunter_world_guide/: SKILL.md
skills/monster_hunter_world_guide/database/: README.md
skills/monster_hunter_world_guide/references/: close-game.md  start-game.md
skills/sensor-guide/: SKILL.md
