[project]
name = "robotagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "opencv-python>=4.13.0.92",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "qq-botpy>=1.2.1",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"